# CleanLinuxpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  com.linuxlaghouatalgeria.CleanLinuxpc.desktop  com.linuxlaghouatalgeria.CleanLinuxpc.metainfo.xml  index.html
packaging/: com.linuxlaghouatalgeria.CleanLinuxpc.desktop  com.linuxlaghouatalgeria.CleanLinuxpc.metainfo.xml
resources/: icons.qrc  translations.qrc
resources/translations/: cleanlinux_ar.qm  cleanlinux_ar.ts  cleanlinux_en.qm  cleanlinux_en.ts
src/: analyzer.cpp  analyzer.h  cleaner.cpp  cleaner.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  statsmodel.cpp  statsmodel.h
ui/: mainwindow.ui
